Fix scorebar visible when no score available

--- a/src/scripts/components/media-screen/end-screen.scss
+++ b/src/scripts/components/media-screen/end-screen.scss
@@ -15,6 +15,10 @@
     .h5p-question-scorebar {
       margin: 0 0 1em 0;
       padding: 0;
+
+      &.display-none {
+        display: none;
+      }
     }
   }
 
